Update eslint config to write semi colon

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,14 +32,21 @@
     "env": {
       "node": true
     },
+    "rules": {
+      "semi": ["error", "always"],
+      "semi-spacing": ["error", {"after": true, "before": false}],
+      "semi-style": ["error", "last"],
+      "no-extra-semi": "error",
+      "no-unexpected-multiline": "error",
+      "no-unreachable": "error"
+    },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/recommended",
       "eslint:recommended"
     ],
     "parserOptions": {
       "parser": "babel-eslint"
-    },
-    "rules": {}
+    }
   },
   "browserslist": [
     "> 1%",
