--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,9 +33,21 @@
       "node": true
     },
     "rules": {
-      "semi": ["error", "always"],
-      "semi-spacing": ["error", {"after": true, "before": false}],
-      "semi-style": ["error", "last"],
+      "semi": [
+        "error",
+        "always"
+      ],
+      "semi-spacing": [
+        "error",
+        {
+          "after": true,
+          "before": false
+        }
+      ],
+      "semi-style": [
+        "error",
+        "last"
+      ],
       "no-extra-semi": "error",
       "no-unexpected-multiline": "error",
       "no-unreachable": "error"
