--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "ramda": "^0.27.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-pug": "^1.0.7",
