--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "leader-line-vue": "^2.1.1",
+    "ramda": "^0.27.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-pug": "^1.0.7",
